--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,8 @@
-{}
+{
+  "i18n-ally.localesPaths": [
+    "src/locales",
+    "src/components/i18n",
+    "src/utils/i18n",
+    "coverage/lcov-report/utils/i18n"
+  ]
+}
