--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "dotenv": "^16.3.1",
     "flowbite-react": "^0.7.2",
     "i": "^0.3.7",
+    "i18next": "^23.8.2",
     "jest-fetch-mock": "^3.0.3",
     "next": "14.0.4",
     "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.0.2",
     "react-query": "^3.39.3",
     "ts-node": "^10.9.2"
   },
