--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@babel/preset-env": "^7.23.6",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
+    "accept-language": "^3.0.18",
     "dotenv": "^16.3.1",
     "flowbite-react": "^0.7.2",
     "i": "^0.3.7",
+    "i18next": "^23.8.2",
+    "i18next-resources-to-backend": "^1.2.0",
     "jest-fetch-mock": "^3.0.3",
+    "locize-cli": "^8.0.0",
     "next": "14.0.4",
     "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^14.0.2",
     "react-query": "^3.39.3",
     "ts-node": "^10.9.2"
   },
