feat: implement user registration route

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "locize-cli": "^8.0.0",
     "next": "14.0.4",
     "npm": "^10.2.5",
+    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.0.2",
@@ -40,8 +41,9 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.64",
     "@types/react-dom": "^18",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "autoprefixer": "^10.0.1",
     "babel-jest": "^29.7.0",
     "cypress": "^13.6.1",
