--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jest-fetch-mock": "^3.0.3",
     "locize-cli": "^8.0.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.7",
     "npm": "^10.2.5",
     "prettier": "^3.2.5",
     "react": "^18",
@@ -54,6 +55,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.2",
-    "typescript": "^5"
+    "typescript": "^5.4.3"
   }
 }
