--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "next": "14.0.4",
     "next-auth": "^4.24.7",
     "npm": "^10.2.5",
-    "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.0.2",
@@ -48,11 +47,13 @@
     "autoprefixer": "^10.0.1",
     "babel-jest": "^29.7.0",
     "cypress": "^13.6.1",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.3"
