--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
-    "@babel/core": "^7.23.6",
-    "@babel/preset-env": "^7.23.6",
+    "@tanstack/react-query": "^5.20.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "accept-language": "^3.0.18",
@@ -24,29 +23,39 @@
     "jest-fetch-mock": "^3.0.3",
     "locize-cli": "^8.0.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.7",
     "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-i18next": "^14.0.2",
     "react-query": "^3.39.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.9",
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
-    "@testing-library/jest-dom": "^6.3.0",
-    "@types/jest": "^29.5.11",
+    "@testing-library/jest-dom": "^6.4.2",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.2.64",
     "@types/react-dom": "^18",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "autoprefixer": "^10.0.1",
+    "babel-jest": "^29.7.0",
     "cypress": "^13.6.1",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0",
-    "ts-jest": "^29.1.1",
-    "typescript": "^5"
+    "ts-jest": "^29.1.2",
+    "typescript": "^5.4.3"
   }
 }
