--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "i18next-resources-to-backend": "^1.2.0",
     "jest-fetch-mock": "^3.0.3",
     "locize-cli": "^8.0.0",
-    "next": "14.0.4",
+    "next": "^14.2.1",
     "next-auth": "^4.24.7",
     "npm": "^10.2.5",
     "react": "^18",
@@ -39,6 +39,8 @@
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.4.13",
     "@testing-library/jest-dom": "^6.4.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
