--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cypress:open": "cypress open"
   },
   "dependencies": {
+    "@babel/plugin-proposal-do-expressions": "^7.24.1",
     "@tanstack/react-query": "^5.20.5",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
