--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^14.5.2",
     "accept-language": "^3.0.18",
     "dotenv": "^16.3.1",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "flowbite-react": "^0.7.8",
     "i": "^0.3.7",
     "i18next": "^23.8.2",
@@ -58,6 +59,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.3"
