--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
     "src/components/i18n",
     "src/utils/i18n",
     "coverage/lcov-report/utils/i18n"
-  ]
+  ],
+  "i18n-ally.keystyle": "nested"
 }
