--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "dotenv": "^16.3.1",
-    "flowbite-react": "^0.7.2",
+    "eslint-plugin-tailwindcss": "^3.15.1",
+    "flowbite-react": "^0.7.8",
     "i": "^0.3.7",
     "i18next": "^23.8.2",
     "i18next-resources-to-backend": "^1.2.0",
     "jest-fetch-mock": "^3.0.3",
     "locize-cli": "^8.0.0",
-    "next": "^14.2.1",
+    "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "npm": "^10.2.5",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-i18next": "^14.0.2",
     "react-query": "^3.39.3",
     "ts-node": "^10.9.2",
@@ -54,12 +55,13 @@
     "babel-jest": "^29.7.0",
     "cypress": "^13.6.1",
     "eslint": "^8.57.0",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "^14.2.3",
     "eslint-config-prettier": "^9.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
     "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.3.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.3"
