--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "accept-language": "^3.0.18",
+    "axios": "^1.6.8",
     "clsx": "^2.1.1",
     "dotenv": "^16.3.1",
     "flowbite-react": "^0.7.2",
