--- a/package.json
+++ b/package.json
@@ -23,24 +23,21 @@
         "flowbite": "^2.3.0",
         "flowbite-react": "^0.7.8",
         "i": "^0.3.7",
-        "i18next": "^23.8.2",
-<<<<<<< HEAD
         "i18next-browser-languagedetector": "^8.0.0",
         "i18next-chained-backend": "^4.6.2",
         "i18next-localstorage-backend": "^4.2.0",
-=======
-        "i18next-browser-languagedetector": "^7.2.1",
         "i18next-http-backend": "^2.5.1",
->>>>>>> 5f77dbb (feat: working on i18n library configuration)
-        "i18next-resources-to-backend": "^1.2.0",
+        "i18next": "^23.11.3",
+        "i18next-resources-to-backend": "^1.2.1",
         "jest-fetch-mock": "^3.0.3",
         "locize-cli": "^8.0.0",
         "next": "^14.2.3",
         "next-auth": "^4.24.7",
         "npm": "^10.2.5",
         "react": "^18.3.1",
+        "react-cookie": "^7.1.4",
         "react-dom": "^18.3.1",
-        "react-i18next": "^14.0.2",
+        "react-i18next": "^14.1.1",
         "react-query": "^3.39.3",
         "ts-node": "^10.9.2",
         "zod": "^3.22.4"
@@ -48,9 +45,9 @@
     "devDependencies": {
         "@babel/core": "^7.23.9",
         "@babel/plugin-syntax-jsx": "^7.24.1",
-        "@babel/preset-env": "^7.23.9",
+        "@babel/preset-env": "^7.24.5",
         "@babel/preset-react": "^7.24.1",
-        "@babel/preset-typescript": "^7.23.3",
+        "@babel/preset-typescript": "^7.24.1",
         "@jest/globals": "^29.7.0",
         "@swc/cli": "^0.3.12",
         "@swc/core": "^1.4.13",
@@ -74,6 +71,7 @@
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.14",
         "tailwindcss": "^3.4.3",
+        "react-test-renderer": "^18.3.1",
         "ts-jest": "^29.1.2",
         "typescript": "^5.4.3"
     }
