--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "clsx": "^2.1.1",
         "dotenv": "^16.3.1",
         "eslint-plugin-tailwindcss": "^3.15.1",
+        "flowbite": "^2.3.0",
         "flowbite-react": "^0.7.8",
         "i": "^0.3.7",
         "i18next": "^23.8.2",
@@ -54,7 +55,7 @@
         "@types/react": "^18.2.64",
         "@types/react-dom": "^18",
         "@types/testing-library__jest-dom": "^6.0.0",
-        "autoprefixer": "^10.0.1",
+        "autoprefixer": "^10.4.19",
         "babel-jest": "^29.7.0",
         "cypress": "^13.6.1",
         "eslint": "^8.57.0",
@@ -64,10 +65,10 @@
         "eslint-plugin-testing-library": "^6.2.2",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
-        "postcss": "^8",
+        "postcss": "^8.4.38",
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.14",
-        "tailwindcss": "^3.3.0",
+        "tailwindcss": "^3.4.3",
         "ts-jest": "^29.1.2",
         "typescript": "^5.4.3"
     }
