--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
         "@jest/globals": "^29.7.0",
         "@swc/cli": "^0.3.12",
         "@swc/core": "^1.4.13",
-        "@testing-library/jest-dom": "^6.4.2",
+        "@testing-library/jest-dom": "^6.4.5",
         "@types/jest": "^29.5.12",
         "@types/node": "^20",
         "@types/react": "^18.2.64",
@@ -57,6 +57,8 @@
         "eslint": "^8.57.0",
         "eslint-config-next": "^14.2.3",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-jest-dom": "^5.4.0",
+        "eslint-plugin-testing-library": "^6.2.2",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
         "postcss": "^8",
