--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "dependencies": {
         "@babel/plugin-proposal-do-expressions": "^7.24.1",
         "@tanstack/react-query": "^5.20.5",
-        "@testing-library/react": "^14.1.2",
         "@testing-library/user-event": "^14.5.2",
         "accept-language": "^3.0.18",
         "axios": "^1.6.8",
@@ -50,6 +49,7 @@
         "@swc/cli": "^0.3.12",
         "@swc/core": "^1.4.13",
         "@testing-library/jest-dom": "^6.4.5",
+        "@testing-library/react": "^15.0.7",
         "@types/jest": "^29.5.12",
         "@types/node": "^20",
         "@types/react": "^18.2.64",
@@ -68,8 +68,9 @@
         "postcss": "^8.4.38",
         "prettier": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.5.14",
+        "react-test-renderer": "^18.3.1",
         "tailwindcss": "^3.4.3",
-        "ts-jest": "^29.1.2",
-        "typescript": "^5.4.3"
+        "ts-jest": "^29.1.4",
+        "typescript": "^5.4.5"
     }
 }
