--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         "noEmit": true,
         "esModuleInterop": true,
         "module": "esnext",
-        "moduleResolution": "node",
+        "moduleResolution": "bundler",
         "resolveJsonModule": true,
         "isolatedModules": true,
         "jsx": "preserve",
@@ -18,7 +18,7 @@
                 "name": "next"
             }
         ],
-        "baseUrl": ".",
+        "baseUrl": "./",
         "paths": {
             "@/types/*": ["src/*"]
         },
@@ -31,7 +31,8 @@
         ".next/types/**/*.ts",
         "src/utils/i18n/server.ts",
         "src/**/*",
-        "./jest-setup.js",
+        "jest-setup.ts",
+        "jest-config.ts",
         "tailwind.config.ts"
     ],
     "exclude": ["node_modules"]
